-refactoring navigation version 1.05

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -7,7 +7,7 @@
         android:title="Люди" />
     <item
         android:id="@+id/navigation_groups"
-        android:icon="@drawable/ic_plus"
+        android:icon="@drawable/ic_family_room"
         app:labelVisibilityMode="unlabeled"
         android:title="Группа" />
     <item
