--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,14 @@
     android:orientation="vertical">
 
 
-
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:minHeight="?attr/actionBarSize"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:titleTextColor="@android:color/white"
+        android:background="?attr/colorPrimary">
+    </androidx.appcompat.widget.Toolbar>
 
     <com.ilocator.utils.CustomViewPager
         android:id="@+id/viewpager1"
@@ -25,21 +32,7 @@
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottom_navigation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:background="#FFF"
-            app:itemIconTint="#512DA8"
-            app:itemTextColor="#512DA8"
-            app:labelVisibilityMode="selected"
-            app:menu="@menu/main" />
-
-
-    </LinearLayout>
+        android:orientation="horizontal"/>
 
 
 
