--- a/app/src/main/res/layout/users_activity.xml
+++ b/app/src/main/res/layout/users_activity.xml
@@ -1,64 +1,140 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="183dp"
-        android:layout_height="181dp"
-        android:layout_gravity="center_vertical|center_horizontal"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="10dp"
-        app:srcCompat="@drawable/ic_logo" />
-
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="221dp"
-        android:layout_height="25dp"
-        android:layout_gravity="center_vertical|center_horizontal"
-        app:srcCompat="@drawable/ic_name" />
 
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="bottom">
-
-
-        <View
-            android:id="@+id/view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:background="#512DA8" />
-
-        <com.google.android.gms.common.SignInButton
-            android:id="@+id/sign_in_button"
-            android:layout_width="141dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="120dp"
-            android:text="Войти" />
+        android:orientation="vertical">
 
 
 
         <TextView
-            android:id="@+id/design"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="25sp"
+            android:fontFamily="sans-serif-medium"
+            android:textStyle="normal"
+            android:textColor="#23203f"
+            android:layout_marginTop="47dp"
+            android:layout_gravity="center"
+            android:letterSpacing="-0.01"
+            android:lineSpacingExtra="20sp"
+            android:text="Войти"
+            />
+
+        <customfonts.MyTextView_Roboto_Regular
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:letterSpacing="0.0265"
+            android:textColor="#6e6e73"
+            android:layout_gravity="center"
+            android:text="Авторизуйтесь чтобы продолжить"
+            android:textSize="17sp"/>
+
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:gravity="center"
-            android:text="design by Irina K."
-            android:textColor="#FFFFFF"
-            android:layout_gravity="bottom"/>
+            android:layout_marginTop="73dp"
+            android:layout_marginRight="29dp"
+            android:layout_marginLeft="29dp"
+            android:orientation="vertical">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="211dp"
+                android:layout_height="177dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_male_user_svgrepo_com" />
+
+            <customfonts.EditText_Roboto_Regular
+                android:id="@+id/login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#00000000"
+                android:layout_marginTop="28dp"
+                android:textSize="25sp"
+                android:fontFamily="sans-serif"
+                android:textStyle="normal"
+                android:textColor="#23203f"
+                android:text=""
+                android:hint="Логин"
+                />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/view_gray"
+                android:layout_marginTop="18dp"
+                />
+
+            <customfonts.EditText_Roboto_Regular
+                android:id="@+id/pass"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#00000000"
+                android:layout_marginTop="13.3dp"
+                android:hint="Пароль"
+                android:paddingRight="20dp"
+                android:drawableRight="@drawable/view_password"
+                android:inputType="textPassword"
+                android:textSize="25sp"
+                android:fontFamily="sans-serif-light"
+                android:textStyle="normal"
+                android:textColor="#9391a4"
+
+                />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/view_gray"
+                android:layout_marginTop="18dp"
+                />
+
+
+            <customfonts.MyTextView_Roboto_Regular
+                android:id="@+id/btn.login"
+                android:layout_width="match_parent"
+                android:layout_height="53dp"
+                android:layout_marginLeft="33dp"
+                android:layout_marginRight="33dp"
+                android:layout_marginTop="38dp"
+                android:background="@drawable/button_gradient"
+                android:text="Войти"
+                android:gravity="center"
+                android:lineSpacingExtra="34sp"
+                android:textColor="#ffffff"
+                android:textSize="22sp"
+                android:paddingTop="10.5dp"
+                android:paddingBottom="10.5dp"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
 
 
-    </FrameLayout>
 
 
-</LinearLayout>
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+
+
+    </LinearLayout>
+
+
+
+</RelativeLayout>
