--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -61,11 +61,13 @@
 
     </LinearLayout>
     <Button
-        android:textColor="#fff"
 
+        android:id="@+id/logout"
+        android:textColor="#fff"
+        android:background="@color/colorPrimaryDark"
         android:layout_marginTop="35dp"
         android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Follow Me"/>
+        android:text="Выйти"/>
 </LinearLayout>
