-add back button in toolbox

--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -7,6 +7,15 @@
     tools:context=".activities.MainActivity"
     android:background="@color/whiteTextColor"
     android:orientation="vertical">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:minHeight="?attr/actionBarSize"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:titleTextColor="@android:color/white"
+        android:background="?attr/colorPrimary">
+    </androidx.appcompat.widget.Toolbar>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="405dp">
