--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -21,7 +21,7 @@
         android:layout_height="405dp">
         <LinearLayout
             android:layout_marginTop="50dp"
-            android:background="@drawable/button_gradient"
+
             android:layout_width="match_parent"
             android:layout_height="350dp"
             android:orientation="vertical">
@@ -30,15 +30,15 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                android:src="@drawable/ic_male_user_svgrepo_com"/>
+                android:src="@drawable/ic_beard"/>
             <TextView
                 android:id="@+id/Name"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Wiliam Snoe"
-                android:textColor="#fff"
+                android:textColor="#AAA"
                 android:textStyle="bold"
                 android:textSize="21sp"/>
         </LinearLayout>
