--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="Пожалуйста подождите..."
+        android:text="Загружаем диалоги..."
         />
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginTop="55dp"
