--- a/app/src/main/res/layout/chat_item_self.xml
+++ b/app/src/main/res/layout/chat_item_self.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:gravity="right"
     android:orientation="horizontal"
     android:paddingBottom="5dp"
@@ -14,9 +14,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="50dp"
         android:textIsSelectable="true"
-        android:background="@drawable/bg_bubble_gray"
+        android:padding="10dp"
+        android:background="@color/colorPrimaryDark"
         android:textSize="14dp" />
 
     <TextView
@@ -26,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_alignRight="@id/message"
         android:layout_below="@id/message"
-        android:layout_marginBottom="25dp"
+        android:layout_marginBottom="10dp"
         android:padding="10dp"
         android:textSize="10dp" />
 
