--- a/app/src/main/res/layout/chat_item_other.xml
+++ b/app/src/main/res/layout/chat_item_other.xml
@@ -13,10 +13,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="50dp"
         android:textIsSelectable="true"
         android:padding="10dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="@drawable/bg_bubble_gray"
         android:textSize="14dp" />
 
     <TextView
