--- a/app/src/main/res/layout/chat_item_self.xml
+++ b/app/src/main/res/layout/chat_item_self.xml
@@ -18,7 +18,7 @@
         android:layout_marginLeft="50dp"
         android:textIsSelectable="true"
         android:padding="10dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="#ddf8c8"
         android:textSize="14dp" />
 
     <TextView
