--- a/app/src/main/res/layout/content_chat_room.xml
+++ b/app/src/main/res/layout/content_chat_room.xml
@@ -7,13 +7,14 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activities.ChatRoomActivity"
     android:background="@android:color/white"
+
     tools:showIn="@layout/activity_chat_room">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="20dp"
-
+        android:layout_marginBottom="30dp"
         android:scrollbars="vertical" />
 
 
