--- a/app/src/main/res/layout/chat_rooms_list_row.xml
+++ b/app/src/main/res/layout/chat_rooms_list_row.xml
@@ -1,35 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="76dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:paddingBottom="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="16dp">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="30dp"
-
-        app:backgroundTint="@color/colorPrimaryDark"
-
-
-        app:srcCompat="@drawable/ic_gps_fi_white" />
-
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="76dp"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:orientation="vertical"
-        android:paddingBottom="5dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingTop="16dp"
-
-        >
     <TextView
         android:id="@+id/name"
         android:layout_width="match_parent"
@@ -69,6 +48,5 @@
         android:background="@drawable/bg_circle"/>
 
 
-</RelativeLayout>
 
-</FrameLayout>
+</RelativeLayout>
