-add new message activity

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <TextView
         android:id="@+id/wait"
         android:layout_width="match_parent"
@@ -10,6 +15,8 @@
         android:gravity="center"
         android:text="Загружаем диалоги..."
         />
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginTop="55dp"
         android:id="@+id/recyclerview"
@@ -17,8 +24,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    </RelativeLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="20dp"
+        android:layout_alignParentRight="true"
+
+        android:layout_marginBottom="20dp"
+        app:backgroundTint="@color/colorPrimaryDark"
+        app:srcCompat="@drawable/ic_new_message" />
 
 </RelativeLayout>
+
+
+
 
 
 
