--- a/app/src/main/res/layout/fragment_new_message.xml
+++ b/app/src/main/res/layout/fragment_new_message.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activities.NewMessageActivity"
+    tools:context=".activities.ui.main.PlaceholderFragment"
     android:background="@android:color/white"
     tools:showIn="@layout/fragment_new_message">
     <androidx.recyclerview.widget.RecyclerView
