--- a/app/src/main/res/layout/users_activity.xml
+++ b/app/src/main/res/layout/users_activity.xml
@@ -22,7 +22,7 @@
             android:fontFamily="sans-serif-medium"
             android:textStyle="normal"
             android:textColor="#23203f"
-            android:layout_marginTop="47dp"
+            android:layout_marginTop="20dp"
             android:layout_gravity="center"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="20sp"
@@ -42,24 +42,24 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="73dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="25dp"
             android:layout_marginRight="29dp"
             android:layout_marginLeft="29dp"
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_1781443" />
+                app:srcCompat="@drawable/ic_whatsapp_287520" />
 
             <customfonts.EditText_Roboto_Regular
                 android:id="@+id/login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#00000000"
-                android:layout_marginTop="28dp"
+                android:layout_marginTop="10dp"
                 android:textSize="25sp"
                 android:fontFamily="sans-serif"
                 android:textStyle="normal"
@@ -129,7 +129,7 @@
                 android:layout_height="53dp"
                 android:layout_marginLeft="33dp"
                 android:layout_marginRight="33dp"
-                android:layout_marginTop="38dp"
+                android:layout_marginTop="5dp"
                 android:background="@drawable/button_gradient"
                 android:text="Войти"
                 android:gravity="center"
