--- a/app/src/main/res/layout/content_chat_room.xml
+++ b/app/src/main/res/layout/content_chat_room.xml
@@ -19,34 +19,31 @@
 
 
     <LinearLayout
-        android:background="@android:color/white"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="0dp"
+        android:background="@android:color/white"
         android:orientation="horizontal"
-        android:weightSum="4">
+        android:weightSum="3.2">
 
 
-        <EditText android:id="@+id/message"
-            android:layout_width="0dp"
-            android:hint="Введите сообщение..."
-            android:paddingLeft="10dp"
-            android:background="@null"
-            android:layout_marginRight="10dp"
+        <EditText
+            android:id="@+id/message"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginLeft="16dp"
-            android:lines="1"
-            android:layout_height="wrap_content"
-            android:layout_weight="3" />
-
-        <Button android:id="@+id/btn_send"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_marginRight="10dp"
+            android:layout_weight="3"
             android:background="@null"
-            android:text="Отправить"
-            android:textSize="16dp"
-            android:textColor="@color/colorPrimary" />
+            android:hint="Введите сообщение..."
+            android:lines="1"
+            android:paddingLeft="10dp" />
 
+        <Button
+            android:id="@+id/btn_send"
+            android:layout_width="35dp"
+            android:layout_height="33dp"
+            android:background="@drawable/ic_send_msg" />
     </LinearLayout>
-
 </RelativeLayout>
