--- a/app/src/main/res/layout/chat_item_self.xml
+++ b/app/src/main/res/layout/chat_item_self.xml
@@ -7,7 +7,18 @@
     android:paddingBottom="5dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp">
+    <ImageView
+        android:id="@+id/img"
 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="50dp"
+        android:textIsSelectable="true"
+        android:padding="10dp"
+
+        />
     <TextView
         android:id="@+id/message"
         android:text="@string/action_profile"
