--- a/app/src/main/res/layout/contacts_list_row.xml
+++ b/app/src/main/res/layout/contacts_list_row.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="76dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingBottom="16dp"
@@ -16,8 +16,21 @@
         android:layout_alignParentTop="true"
         android:textColor="#444444"
         android:textStyle="bold"
-        android:text="+79286606399"
+        android:text="Игорямба"
         android:textSize="16dp" />
+
+    <TextView android:id="@+id/number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/name"
+        android:textColor="#888888"
+        android:layout_marginTop="5dp"
+        android:text="+79286606399"/>
+
+
+
+
+
 
 
 </RelativeLayout>
